--- a/form352.html
+++ b/form352.html
@@ -67,7 +67,6 @@
             <label for="number9">Number 9:</label>
             <input type="number" id="number9" name="number9" min="1" max="99" required>
     </div>
-    -->
     <!--  defenders -->
     <div class="row">
         <div class="col">
@@ -103,6 +102,6 @@
         </div>
     </div>
         <input type="hidden" name="lineupType" value="352">
-    <button type="submit">Submit</button>
+    <button type="submit">Create the lineup!</button>
 </form>
 
